Wed Aug  7 13:20:12 2013  Koichi Sasada  <ko1@atdot.net>

	* random.c (random_load): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

Wed Aug  7 12:58:23 2013  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_start_func_2): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

Wed Aug  7 09:00:24 2013  Zachary Scott  <e@zzak.io>

	* string.c: [DOC] Description of rb_str_equal [Fixes GH-375]
	  Based on a patch by @markijbema
	  https://github.com/ruby/ruby/pull/375

Wed Aug  7 08:30:38 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_hmac.c: [DOC] Documentation for OpenSSL::HMAC
	  based on a patch by @repah documenting-ruby/ruby#14
	  https://github.com/documenting-ruby/ruby/pull/14

Wed Aug  7 07:46:23 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/utils.rb: [DOC] RSS::Utils by Steve Klabnik [Bug #8745]

Wed Aug  7 07:38:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (nlz16): Removed.
	  (nlz32): Ditto.
	  (nlz64): Ditto.
	  (nlz128): Ditto.
	  (nlz_int): New function.
	  (nlz_long): New function.
	  (nlz_long_long): New function.
	  (nlz_int128): New function.
	  (nlz): Follow above changes.
	  (bitsize): Follow above changes.

Tue Aug  6 22:38:15 2013  Zachary Scott  <e@zzak.io>

	* time.c: [DOC] Typo in Time overview by @sparr [Fixes GH-374]
	  https://github.com/ruby/ruby/pull/374

Tue Aug  6 22:35:32 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/1.0.rb: [DOC] Document RSS10 by Steve Klabnik [Bug #8740]

Tue Aug  6 22:14:11 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c (readline_s_delete_text): remove
	  checking "$SAFE == 4".

	* ext/readline/readline.c: fix rdoc, remove "Raises SecurityError"
	  and add "Raises NotImplementedError".

Tue Aug  6 22:04:38 2013  Kouji Takao  <kouji.takao@gmail.com>

	* ext/readline/readline.c, test/readline/test_readline.rb: fix
	  indent.

Tue Aug  6 21:59:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
